Deal with HTML entities

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.1",
     "apollo-link-state": "^0.4.0",
+    "entities": "^1.1.1",
     "expo": "^25.0.0",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
